# libft

./: CMakeLists.txt
includes/: ft_bool.h  ft_printf.h  ft_type.h  get_next_line.h  libft.h
